# delayed_charging

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  package-lock.json  package.json  pyproject.toml  sensor.py  service.py  wip_.pre-commit-config.yaml
.github/workflows/: unit_tests.yaml
[wip]/: entsoe.py  netztransparenz.py  parse_xml.py  results.xml  sungrow.yaml  sungrow_short.yaml
custom_components/delayed_charging/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  service.py  smard.py
custom_components/delayed_charging/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_sensor.py  test_service.py  test_smard.py
